# test_r_mcp

./: .dockerignore  .gitignore  CLAUDE.md  DOCKER_HUB.md  Dockerfile.mcp  LICENSE  MIGRATION.md  README.md  base_r_api.R  build-docker-mcp.sh  claude_desktop_config.json  entrypoint.sh  hello_r_api.R  hello_r_api_refactored.R  hello_r_bridge.py  main.py  pyproject.toml  r_api.R  r_bridge.py  requirements.txt  tmp
.github/workflows/: docker-publish.yml  docker-readme.yml
docker/: README.md
old/: base_r_api.R  hello_r_api_refactored.R  hello_r_bridge.py  r_bridge_refactored.py
